--- a/eshop/store/templates/store/cart.html
+++ b/eshop/store/templates/store/cart.html
@@ -11,10 +11,10 @@
             <table class="table">
                 <tr>
                     <th>
-                        <h5>Items: <strong>3</strong></h5>
+                        <h5>Items: <strong>{{ order.get_cart_items }}</strong></h5>
                     </th>
                     <th>
-                        <h5>Total:<strong> $42</strong></h5>
+                        <h5>Total:<strong> ${{ order.get_cart_total }}</strong></h5>
                     </th>
                     <th>
                         <a class="btn btn-success btn-cart" href="{% url 'checkout' %}">Checkout</a>
@@ -32,12 +32,13 @@
                 <div style="flex:1"><strong>Quantity</strong></div>
                 <div style="flex:1"><strong>Total</strong></div>
             </div>
+            {% for item in items %}
             <div class="cart-row">
-                <div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}"></div>
-                <div style="flex:2"><strong>Product 1</strong></div>
-                <div style="flex:1"><strong>$25</strong></div>
+                <div style="flex:2"><img class="row-image" src="{{ item.product.imageURL }}"></div>
+                <div style="flex:2"><strong>{{ item.product.name }}</strong></div>
+                <div style="flex:1"><strong>${{ item.product.price|floatformat:2 }}</strong></div>
                 <div style="flex:1">
-                    <p class="quantity">2</p>
+                    <p class="quantity">x{{ item.quantity }}</p>
                     <div class="quantity">
                         <img class="chg-quantity" src="{% static  'images/arrow-up.png' %}">
 
@@ -45,9 +46,10 @@
                     </div>
                 </div>
                 <div style="flex:1">
-                    <p>$50</p>
+                    <p>${{ item.get_total }}</p>
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
 
